fix unreadable article navigation

--- a/themes/cryptpad/source/css/_partial/article.styl
+++ b/themes/cryptpad/source/css/_partial/article.styl
@@ -217,7 +217,6 @@
 .article-nav-caption
   text-transform: uppercase
   letter-spacing: 2px
-  color: color-border
   line-height: 1em
   font-weight: bold
   #article-nav-newer &
